# blogsley

./: .gitignore  .pnp.cjs  README.md  app.py  lerna.json  netlify.toml  package.json  pyproject.toml  pywsgi.py  pywsgiql.py  requirements.txt  requirements2.txt  setup.py
__blogsley__/: config.py
blocksley/blocksley/: package.json
blocksley/blocksley-applet/: package.json
blocksley/blocksley-applet-demo/: package.json
blocksley/blocksley-demo/: package.json
blocksley/blocksley-demo-core/: package.json
blocksley/blocksley-quasar-ext/: package.json
blocksley/blocksley-webpack-demo/: package.json
blogsley/: __init__.py  config.py  emails.py  jwt.py  pywsgi.py  sockets.py  version.py  wsgi.py
blogsley/app/: __init__.py
blogsley/auth/: routes.py
blogsley/blogsley/: README.md  package.json  quasar.conf.js
blogsley/command/: __init__.py  populate.py
blogsley/graphql/: routes.py  view.py
blogsley/images/: routes.py
blogsley/models/: blog.py  users.py
blogsley/root/: __init__.py  routes.py
blogsley/schema/: __init__.py  blog.py  images.py  users.py
blogsley/schemas/: blog.py  users.py
blogsleymc/blogsleymc/: package.json  quasar.conf.js
client/: README.md  notes.md  package.json
client/scripts/: deploy.js
docs/: README.md  conf.py  index.rst  requirements.txt
docs/source/: blogsley.app.rst  blogsley.auth.emails.rst  blogsley.auth.forms.rst  blogsley.auth.routes.rst  blogsley.auth.rst  blogsley.command.drop.rst  blogsley.command.dump.rst  blogsley.command.populate.rst  (+27 more)
notes/: gevents.md  gunicorn.md  todo.md
scripts/: deploy.js
(+88 files in other folders)
